// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BlacklistMerger getMergedBlacklist should merge blacklist for different paths 1`] = `
[
  {
    "path": "/root/nodeA",
    "type": "exclude",
  },
  {
    "path": "/another/nodeB",
    "type": "flatten",
  },
  {
    "path": "/another/nodeC",
    "type": "exclude",
  },
  {
    "path": "*prefix/nodeD",
    "type": "flatten",
  },
]
`;

exports[`BlacklistMerger getMergedBlacklist should only contain unique paths+type 1`] = `
[
  {
    "path": "/root/nodeA",
    "type": "exclude",
  },
  {
    "path": "/another/nodeB",
    "type": "flatten",
  },
  {
    "path": "*prefix/nodeD",
    "type": "flatten",
  },
]
`;
